<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ch.ethz.inf.vs.sajaeger.vsrubfischchat.ch.ethz.inf.vs.sajaeger.a3.MainActivity">

    <LinearLayout
        android:id="@+id/linear_top"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/username"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"/>


        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:inputType="text"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_bot"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <Button
            android:id="@+id/join_button"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:text="@string/join" />

        <Button
            android:id="@+id/settings_button"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/settings" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_status"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/status"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"/>


        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"/>

    </LinearLayout>


</LinearLayout>
